--- a/app.css
+++ b/app.css
@@ -33,7 +33,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
-    font-color: var(--dark-grey);
+    color: var(--dark-grey);
 }
 
 hr {
@@ -43,9 +43,9 @@ hr {
     border: none;
 }
 
-.overall-container {
-    /* code here */
-}
+/* .overall-container {
+    //code here
+} */
 
 .nav {
     width: 100%;
@@ -56,6 +56,9 @@ hr {
     padding: 16px 24px;
     margin-bottom: var(--sm-space);
     /* border: 1px solid yellow; */
+}
+.nav__menu-btn {
+    display: none;
 }
 .nav__github-logo {
     min-width: 31px;
@@ -83,6 +86,9 @@ hr {
 .nav-options span {
     font-size: 16px;
     cursor: pointer;
+}
+.mobile-search {
+    display: none;
 }
 .search {
     position: relative;
@@ -146,6 +152,9 @@ hr {
     list-style: none;
     /* border: 1px solid yellow; */
 }
+.mobile-nav-items {
+    display: none;
+}
 .nav-items li {
     margin-right: calc(var(--sm-space) - 5px);
     font-weight: bold;
@@ -153,6 +162,9 @@ hr {
 .nav-items li:hover {
     cursor: pointer;
     opacity: 0.7;
+}
+.nav-items__pulls {
+    display: none;
 }
 .nav__notification,
 .nav__new-btn,
@@ -181,9 +193,9 @@ hr {
 }
 
 
-.main-container {
-    /* code here */
-}
+/* .main-container {
+    //code here
+} */
 .main-nav {
     position: sticky;
     top: 0;
@@ -267,6 +279,7 @@ hr {
     width: 30%;
     max-width: 20em;
     margin-right: 35px;
+    position: relative;
     /* border: 1px solid purple; */
 }
 .profile-photo {
@@ -291,7 +304,7 @@ hr {
     align-items: center;
     position: absolute;
     padding: 5px 10px;
-    top: 70%;
+    top: 40%;
     left: 80%;
     background-color: var(--white);
     min-width: 40px;
@@ -322,6 +335,7 @@ hr {
 .profile__desc {
     line-height: 1.5;
     font-size: 16px;
+    margin-bottom: 30px;
     /* margin-right: var(--sm-space); */
 }
 
@@ -396,7 +410,7 @@ hr {
 .repo-info__update {
     display: flex;
     align-items: center;
-    margin-right: 20px;
+    margin: 0 20px 10px 0;
     color: var(--text-color);
     /* border: 1px solid red; */
 }
@@ -455,7 +469,177 @@ hr {
 
 
 
+/* ==================== Tablet View ==================== */
+@media only screen and (max-width: 1000px){
+    /* .nav-items__dashboard, */
+    .nav-items__pulls {
+        display: flex;
+    }
+    .nav-items__pull-requests {
+        display: none;
+    }
+    .search__bar:focus {
+        width: 300px;
+    }
+    
+    .main-nav-user {
+        /* visibility: visible; */
+        width: 15%;
+    }
+    .profile-photo__status {
+        top: 25%;
+        left: 80%;
+    }
+}
+
 /* ==================== Mobile View ==================== */
 @media only screen and (max-width: 800px){
-    
+    .nav {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 0;
+        /* border: 1px solid yellow; */
+    }
+    .nav-search-items-container {
+        display: none;
+    }
+    .nav__new-btn,
+    .nav__avatar-btn {
+        display: none;
+    }
+    .nav__menu-btn {
+        display: flex;
+        font-size: 25px;
+        cursor: pointer;
+        /* border: 1px solid green; */
+    }
+    .nav__menu-btn:hover {
+        opacity: 0.7;
+    }
+    .nav__github-logo {
+        margin-right: 0;
+        /* border: 1px solid green; */
+    }    
+    .nav-options,
+    .nav__notification {
+        margin-left: 0;
+        /* border: 1px solid green; */
+    }
+    .mobile-nav-container {
+        color: var(--white);
+        background-color: var(--dark-grey);
+        padding: 0 var(--sm-space);
+        padding-bottom: var(--sm-space);
+        display: none;
+    }
+    .mobile-nav-container hr {
+        outline: none;
+        border: none;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.2);
+    }
+    .mobile-search {
+        display: block;
+        width: 100%;
+        padding-bottom: 15px;
+        /* border: 1px solid green; */
+    }
+    .mobile-search__bar,
+    .mobile-search__bar:focus {
+        width: 100%;
+    }
+    .mobile-search__key-slash {
+        top: 30%;
+    }
+    .main-nav-user {
+        display: none;
+    }
+    .mobile-nav-items {
+        display: flex;
+        flex-direction: column;
+    }
+    .mobile-nav-items li {
+        padding: 10px 0;
+    }
+    .mobile-nav-user {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        visibility: visible;
+    }
+    .mobile-nav-user img {
+        width: 25px;
+        height: 25px;
+    }
+    .mobile-nav-user:hover {
+        opacity: 0.7;
+    }
+    .logout-icon {
+        font-size: 16px;
+        vertical-align: bottom;
+    }
+
+    .main-nav {
+        overflow-x: scroll;
+    }
+
+    .main-body {
+        flex-direction: column;
+    }
+    .profile {
+        max-width: 100%;
+        width: 100%;
+    }
+    .profile-photo {
+        position: unset; 
+        max-width: 6em;
+        max-height: 6em;
+        margin-bottom: var(--sm-space);
+        margin-right: var(--sm-space);
+        /* border: 1px solid orange; */
+    }
+    .profile-photo img {
+        margin: 0;
+        width: 100%;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
+    .profile-photo__status {
+        position: unset;
+        word-break: break-word;
+        min-width: 25px;
+        min-height: 25px;
+        margin-bottom: 15px;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+    }
+    .profile-photo__status:hover {
+        box-shadow: 0 0 2px rgb(73, 73, 73, 0.2);
+        cursor: pointer;
+        color: var(--light-blue);
+    }
+    .profile-photo, .profile-info{
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .main__find-repo {
+        width: 100%;
+    }
+    .repo-info {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .main-nav-items :first-child {
+        display: none;
+    }
 }
