--- a/app.css
+++ b/app.css
@@ -43,6 +43,14 @@ hr {
     border: none;
 }
 
+a {
+    color: var(--dark-grey);
+    text-decoration: none;
+}
+
+.iconify {
+    font-size: 16px;
+}
 /* .overall-container {
     //code here
 } */
@@ -279,6 +287,7 @@ hr {
     width: 30%;
     max-width: 20em;
     margin-right: 35px;
+    margin-bottom: 25px;
     position: relative;
     /* border: 1px solid purple; */
 }
@@ -304,7 +313,7 @@ hr {
     align-items: center;
     position: absolute;
     padding: 5px 10px;
-    top: 40%;
+    top: 30%;
     left: 80%;
     background-color: var(--white);
     min-width: 40px;
@@ -338,15 +347,95 @@ hr {
     margin-bottom: 30px;
     /* margin-right: var(--sm-space); */
 }
+.edit-profile-btn {
+    width: 100%;
+    padding: 9px 15px;
+    margin-bottom: var(--sm-space);
+    font-weight: 600;
+    color: var(--dark-grey);
+    background-color: #fafbfc;
+    border: 1px solid #c4c4c4;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition: 0.3s ease;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+}
+.other-profile-info {
+    color: #586069;
+    display: flex;
+    align-items: center;
+    margin-bottom: var(--sm-space);
+}
+.dot-separator{
+    margin: -5px 5px 0 5px;
+    font-weight: 500;
+}
+.followers,
+.following,
+.total-stars {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    /* border: 1px solid lightgray; */
+}
+.followers-count,
+.following-count,
+.total-star-count {
+    color: var(--dark-grey);
+    font-weight: 500;
+    margin: 0 5px;
+}
+.followers:hover,
+.following:hover,
+.total-stars:hover {
+    color: var(--light-blue);
+}
+.website-link,
+.twitter-link {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.website-link :first-child,
+.twitter-link :first-child {
+    font-size: 16px;
+    color: #586069;
+    cursor: auto;
+}
+.other-profile-info a,
+.website-link a {
+    color: var(--dark-grey);
+    text-decoration: none;
+}
+.website-link a:hover,
+.twitter-link:hover {
+    text-decoration: underline;
+    color: var(--light-blue);
+}
+
 
 .main-body-repos {
     /* border: 1px solid purple; */
     width: 100%;
 }
+.find-repo-filter-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .main__find-repo {
-    width: 97%;
+    width: 100%;
     outline: none;
     padding: 9px 10px;
+    height: 35px;
     border: 1px solid var(--very-light-grey);
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -354,10 +443,68 @@ hr {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     margin: 15px 0;
+    margin-right: 10px;
 }
 .main__find-repo:focus {
     border: 1px solid var(--light-blue);
     box-shadow: 0 0 0 3px hsl(212, 97%, 43%, 0.3);
+}
+.filter-btns-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+}
+.filter-btns,
+.new-repo-btn {
+    padding: 9px 15px;
+    display: flex;
+    margin-left: 10px;
+    background-color: #fafbfc;
+    border: 1px solid #c4c4c4;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    transition: 0.3s ease;
+    -webkit-transition: 0.3s ease;
+    -moz-transition: 0.3s ease;
+    -ms-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+}
+.filter-btns {
+    width: 110px;
+    max-height: 35px;
+    color: rgb(68, 68, 68);
+    font-weight: 600;
+}
+.filter-btns:hover, .edit-profile-btn:hover {
+    background-color: #f3f4f6;
+    cursor: pointer;
+}
+.filter-btns-container :nth-child(2) {
+    min-width: 140px;
+}
+.filter-btns i {
+    margin-left: 7px;
+    vertical-align: middle;
+}
+.new-repo-btn {
+    display: flex;
+    align-items: center;
+    background-color: #2ea44f;
+    color: white;
+    border: none;
+    padding: 9px 17px;
+    margin-left: 17px;
+}
+.new-repo-btn :only-child {
+    margin-right: 7px;
+}
+.new-repo-btn:hover {
+    cursor: pointer;
+    background-color: #279747;
 }
 
 .repo-container {
@@ -464,7 +611,37 @@ hr {
     margin-right: 5px;
     color: #586069;
 }
-
+.footer-disector{
+    margin: 0 30px;
+    margin-top: 40px;
+}
+.footer,
+.footer-items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.footer {
+    width: 100%;
+    padding: 50px 30px;
+    /* border: 2px solid teal; */
+}
+.footer-logo {
+    font-size: 25px;
+    color: var(--very-light-grey);
+}
+.footer-items {
+    width: 100%;
+    list-style: none;
+    font-size: 12px;
+}
+.footer-items a {
+    color: var(--light-blue);
+}
+.footer-items li:hover {
+    text-decoration: underline;
+}
 
 
 
@@ -490,7 +667,24 @@ hr {
         top: 25%;
         left: 80%;
     }
+
+    .footer-disector{
+        margin: 0 30px;
+        margin-top: 70px;
+    }
+    .footer,
+    .footer-items {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+        flex-wrap: wrap;
+    }
+    .footer-logo {
+        display: none;
+    }
 }
+
 
 /* ==================== Mobile View ==================== */
 @media only screen and (max-width: 800px){
@@ -629,8 +823,24 @@ hr {
         vertical-align: middle;
     }
 
-    .main__find-repo {
+    .find-repo-filter-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .filter-btns-container {
         width: 100%;
+        justify-content: flex-start;
+        margin-bottom: 15px;
+        /* border: 1px solid red; */
+    }
+    .filter-btns {
+        margin-left: 0;
+    }
+    .filter-btns-container :nth-child(2) {
+        margin-left: 10px;
+    }
+    .new-repo-btn {
+        margin-left: auto;
     }
     .repo-info {
         display: flex;
