--- a/app.css
+++ b/app.css
@@ -343,7 +343,7 @@ img {
     width: 100%;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--very-light-grey);
+    border-bottom: 0.5px solid rgb(236, 236, 236, 0.1);
     padding: 0 var(--general-indent);
     background-color: var(--white);
     z-index: 5;
@@ -378,10 +378,17 @@ img {
     height: 50px;
     cursor: pointer;
     border-bottom: 2.5px solid var(--white);
-    /* border: 1px solid; */
+    /*border: 1px solid;*/
+    
+    transition: 0.6s ease;
+    -webkit-transition: 0.6s ease;
+    -moz-transition: 0.6s ease;
+    -ms-transition: 0.6s ease;
+    -o-transition: 0.6s ease;
 }
 .main-nav-items:hover {
     border-bottom: 2.5px solid var(--very-light-grey);
+    margin: 0;
 }
 /* for active nav item */
 .active,
@@ -675,7 +682,7 @@ img {
 .repo__name {
     font-size: 20px;
     color: var(--light-blue) !important;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
 } 
 .repo__name:hover {
     text-decoration: underline;
@@ -683,8 +690,8 @@ img {
 }
 .repo__desc {
     line-height: 2;
-    margin: 15px 0;
-    font-size: 0.9rem;
+    margin: 5px 0 10px 0;
+    font-size: 0.85rem;
 }
 .topics-container {
     display: flex;
