--- a/app.css
+++ b/app.css
@@ -241,6 +241,7 @@ img {
     -ms-border-radius: 6px;
     -o-border-radius: 6px;
     padding: 5px 15px;
+    padding-right: 35px;
     background-color: var(--dark-grey);
     border: 1px solid hsl(0, 0%, 55%, 0.5);
     background-color: var(--dark-grey);
