--- a/app.css
+++ b/app.css
@@ -344,7 +344,7 @@ img {
     width: 100%;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgb(236, 236, 236, 0.9);
+    border-bottom: 1px solid rgb(236, 236, 236);
     padding: 0 var(--general-indent);
     background-color: var(--white);
     z-index: 5;
